Reset power explorer settings; fixed UI issue of shiny recalculating icon keeps visible even when the caluclation is finished

--- a/src/scss/shidashi.scss
+++ b/src/scss/shidashi.scss
@@ -1261,7 +1261,7 @@ fieldset,
   margin-bottom: 0.8rem;
 }
 
-.shiny-bound-output {
+.shiny-busy .shiny-bound-output {
   &::before {
     content: "";
     position: absolute;
